--- a/PhysiotherapyPortfolio/Physiotherapy.Common/_Resources/Resource.resx
+++ b/PhysiotherapyPortfolio/Physiotherapy.Common/_Resources/Resource.resx
@@ -126,6 +126,9 @@
   <data name="A0004" xml:space="preserve">
     <value>Insert address of your physiotherapy center to &lt;b&gt;greek characters&lt;/b&gt;</value>
   </data>
+  <data name="Add" xml:space="preserve">
+    <value>Add</value>
+  </data>
   <data name="Address" xml:space="preserve">
     <value>Address</value>
   </data>
@@ -155,6 +158,9 @@
   </data>
   <data name="CapsLockOn" xml:space="preserve">
     <value>Caps lock is on</value>
+  </data>
+  <data name="ChangePhoto" xml:space="preserve">
+    <value>Change Photo</value>
   </data>
   <data name="ChooseCity" xml:space="preserve">
     <value>Choose City</value>
@@ -402,6 +408,9 @@
   <data name="PasswordValid" xml:space="preserve">
     <value>The password is not valid</value>
   </data>
+  <data name="PersonalInformation" xml:space="preserve">
+    <value>Personal Information</value>
+  </data>
   <data name="Phone" xml:space="preserve">
     <value>Phone</value>
   </data>
@@ -457,6 +466,9 @@
   <data name="StringLenghtO" xml:space="preserve">
     <value>The {0} must be 5-50 characters</value>
     <comment>String Length Object</comment>
+  </data>
+  <data name="Studies" xml:space="preserve">
+    <value>Studies</value>
   </data>
   <data name="Sun" xml:space="preserve">
     <value>Sun</value>
