create education view completed

--- a/PhysiotherapyPortfolio/Physiotherapy.Common/_Resources/Resource.el.resx
+++ b/PhysiotherapyPortfolio/Physiotherapy.Common/_Resources/Resource.el.resx
@@ -549,4 +549,19 @@
   <data name="MayS" xml:space="preserve">
     <value>Μάϊος</value>
   </data>
+  <data name="GraduationYear" xml:space="preserve">
+    <value>Χρονιά Αποφοίτησης</value>
+  </data>
+  <data name="StartYear" xml:space="preserve">
+    <value>Χρονιά Έναρξης</value>
+  </data>
+  <data name="ExSchool" xml:space="preserve">
+    <value>πχ: Εθνικό Καποδιστριακό Πανεπιστήμιο Αθηνών</value>
+  </data>
+  <data name="ExDegree" xml:space="preserve">
+    <value>πχ: Μπατσελορ</value>
+  </data>
+  <data name="ExDeparture" xml:space="preserve">
+    <value>πχ: Πληροφορικής και Τηλεπικοινωνιών</value>
+  </data>
 </root>
