--- a/PhysiotherapyPortfolio/Physiotherapy.Common/_Resources/Resource.el.resx
+++ b/PhysiotherapyPortfolio/Physiotherapy.Common/_Resources/Resource.el.resx
@@ -535,7 +535,7 @@
     <value>Πληροφορίες Χρήστη</value>
   </data>
   <data name="Username" xml:space="preserve">
-    <value>Ψευδώνυμο</value>
+    <value>Όνομα Χρήστη</value>
   </data>
   <data name="Wed" xml:space="preserve">
     <value>Τετ</value>
