--- a/PhysiotherapyPortfolio/Physiotherapy.Common/_Resources/Resource.el.resx
+++ b/PhysiotherapyPortfolio/Physiotherapy.Common/_Resources/Resource.el.resx
@@ -579,4 +579,31 @@
   <data name="Update" xml:space="preserve">
     <value>Ενημέρωση</value>
   </data>
+  <data name="AddAdminMember" xml:space="preserve">
+    <value>Προσθήκη Admin Χρήστη</value>
+  </data>
+  <data name="Url" xml:space="preserve">
+    <value>Url</value>
+  </data>
+  <data name="Submit" xml:space="preserve">
+    <value>Υποβολή</value>
+  </data>
+  <data name="From" xml:space="preserve">
+    <value>Από</value>
+  </data>
+  <data name="To" xml:space="preserve">
+    <value>Έως</value>
+  </data>
+  <data name="UniqueKey" xml:space="preserve">
+    <value>Μοναδικό κλειδί</value>
+  </data>
+  <data name="MemberId" xml:space="preserve">
+    <value>Id Χρήστη</value>
+  </data>
+  <data name="UrlIsNotCorrect" xml:space="preserve">
+    <value>Το Url δεν έχει την σωστή μορφή. Παρακαλώ προσπαθήστε ξανά!</value>
+  </data>
+  <data name="SearchByUrl" xml:space="preserve">
+    <value>Αναζήτηση με Url</value>
+  </data>
 </root>
