--- a/PhysiotherapyPortfolio/Physiotherapy.Common/_Resources/Resource.resx
+++ b/PhysiotherapyPortfolio/Physiotherapy.Common/_Resources/Resource.resx
@@ -582,4 +582,31 @@
   <data name="Update" xml:space="preserve">
     <value>Update</value>
   </data>
+  <data name="AddAdminMember" xml:space="preserve">
+    <value>Add Admin Member</value>
+  </data>
+  <data name="Url" xml:space="preserve">
+    <value>Url</value>
+  </data>
+  <data name="Submit" xml:space="preserve">
+    <value>Submit</value>
+  </data>
+  <data name="From" xml:space="preserve">
+    <value>From</value>
+  </data>
+  <data name="To" xml:space="preserve">
+    <value>To</value>
+  </data>
+  <data name="UniqueKey" xml:space="preserve">
+    <value>Unique Key</value>
+  </data>
+  <data name="MemberId" xml:space="preserve">
+    <value>Member Id</value>
+  </data>
+  <data name="UrlIsNotCorrect" xml:space="preserve">
+    <value>Url form is not correct. Please try again!</value>
+  </data>
+  <data name="SearchByUrl" xml:space="preserve">
+    <value>Search by url</value>
+  </data>
 </root>
