admin page update

--- a/PhysiotherapyPortfolio/Physiotherapy.Common/_Resources/Resource.el.resx
+++ b/PhysiotherapyPortfolio/Physiotherapy.Common/_Resources/Resource.el.resx
@@ -606,4 +606,7 @@
   <data name="SearchByUrl" xml:space="preserve">
     <value>Αναζήτηση με Url</value>
   </data>
+  <data name="Admin" xml:space="preserve">
+    <value>Διαχειριστής</value>
+  </data>
 </root>
